# kaggle-flood-prediction

./: .gitignore  MANIFEST.IN  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: prepare-env.yaml  qc-and-test.yaml  semver-checker.yaml  test.yaml  version-checker.yaml
flood_prediction/: __init__.py  __main__.py  _type_aliases.py  api.py  assets.py  constants.py  dataset.py  datasets.py  models.py  notebook_utils.py  utils.py
flood_prediction/assets/: compare_features.jsonl
flood_prediction/checkpoints/: .gitkeep
flood_prediction/data/: .gitkeep
flood_prediction/eda/: __init__.py  compare_datasets.py
flood_prediction/models/: __init__.py  catboost_regressor.py  lightgbm_regressor.py  linear_regressor.py  xgboost_regressor.py
flood_prediction/predictors/: __init__.py  models.py
notebooks/: 1-eda.ipynb  2-feature_importance.ipynb  eda.ipynb
tests/: conftest.py  test_polars_utilities.py  test_store_assets.py
