[project]
description = "Package containing the source code for 'Regression with a Flood Prediction Dataset' playground."
dynamic = ["version", "readme", "dependencies"]
license = {file = "LICENCE"}
name = "flood-prediction"
requires-python = ">=3.11"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}
version = {attr = "flood_prediction.__version__"}

[project.optional-dependencies]
all = ["flood-prediction[dev,eda]"]
dev = ["pip-tools", "ruff", "flood-prediction[test]", "kaggle", 'mypy', 'pandas-stubs']
eda = ['seaborn', 'notebook', 'ipykernel', 'statsmodels']
test = ["pytest", "pytest-cov"]

[tool.setuptools.package-dir]
"flood_prediction" = "flood_prediction"

[tool.pytest.ini_options]
addopts = [
  "-vv",
  "-s",
]

[tool.coverage.run]
parallel = true

[tool.ruff.lint]
pydocstyle = {convention = 'google'}
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "D",
]
